--- a/Tasks before Eid/Date_time.html
+++ b/Tasks before Eid/Date_time.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="./functions.js"></script>
+    <script src="./Date_time.js"></script>
 </head>
 <body></body>
 </html>
